--- a/siggraph2023/index.html
+++ b/siggraph2023/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>MML Tutorial</title>
+  <title>PCV Tutorial</title>
   <meta name="description" content="Tutorial on Polarization-based Computer Vision - CVPR 2023">
 
   <link rel="shortcut icon" href="/pol_vis_tutorial/assets/img/favicon.ico">
