--- a/cvpr2023/index.html
+++ b/cvpr2023/index.html
@@ -31,7 +31,7 @@
   <div class="wrapper">
 
     <span class="site-title">
-      <a class="page-link" href="https://hgchen.github.io/pol_vis_tutorial/cvpr2023/">MML Tutorial</a>
+      <a class="page-link" href="https://hgchen.github.io/pol_vis_tutorial/cvpr2023/">PCV Tutorial</a>
     </span>
 
     <nav class="site-nav">
@@ -91,6 +91,7 @@
 <ul>
   <li><strong>Time:</strong> Monday, 6/20/2022, 9:00am - 12:30pm CT. </li>
   <li><strong>Location:</strong> CVPR 2023, Vancouver, BC, Canada. Recorded videos will also be uploaded here soon.</li>
+  <li><strong>Contact:</strong> Please see the organizers' information below.</li>
 </ul>
 
 <hr />
@@ -105,7 +106,7 @@
     <ul class="instructor-info">
       <li><a href="https://cs.gmu.edu/~jinweiye/" target="_blank">Jinwei Ye</a></li>
       <li>George Mason University</li>
-      <li><a href="mailto:jinweiye@gmu.edu" target="_blank">mailto:jinweiye@gmu.edu</a></li>
+      <li><a href="mailto:jinweiye@gmu.edu" target="_blank">jinweiye@gmu.edu</a></li>
     </ul>
   </div>
 
