--- a/siggraph2023/index.html
+++ b/siggraph2023/index.html
@@ -115,7 +115,7 @@
     <a href="https://sites.google.com/view/shbaek/" target="_blank"><img src="/pol_vis_tutorial/assets/img/baek.png" /></a>
 
     <ul class="instructor-info">
-      <li><span>Presenter:</span> <a href="https://sites.google.com/view/shbaek/" target="_blank">Seung-Hwan Baek</a></li>
+      <li><a href="https://sites.google.com/view/shbaek/" target="_blank">Seung-Hwan Baek</a></li>
       <li>POSTECH</li>
       <li><a href="mailto:shwbaek@postech.ac.kr" target="_blank">shwbaek@postech.ac.kr</a></li>
     </ul>
@@ -126,7 +126,7 @@
     <a href="https://visual.ee.ucla.edu/" target="_blank"><img src="/pol_vis_tutorial/assets/img/achuta.jpeg" /></a>
 
     <ul class="instructor-info">
-      <li><span>Presenter:</span> <a href="https://visual.ee.ucla.edu/" target="_blank">Achuta Kadambi</a></li>
+      <li><a href="https://visual.ee.ucla.edu/" target="_blank">Achuta Kadambi</a></li>
       <li>UCLA</li>
       <li><a href="mailto:achuta@eee.ucla.edu" target="_blank">achuta@eee.ucla.edu</a></li>
     </ul>
@@ -137,7 +137,7 @@
     <a href="https://hgchen.com/" target="_blank"><img src="/pol_vis_tutorial/assets/img/chen.jpg" /></a>
 
     <ul class="instructor-info">
-      <li><span>Presenter:</span> <a href="https://hgchen.com/" target="_blank">Huaijin (George) Chen</a></li>
+      <li><a href="https://hgchen.com/" target="_blank">Huaijin (George) Chen</a></li>
       <li>Vayu Robotics</li>
       <li><a href="mailto:huaijin.chen@gmail.com" target="_blank">george@vayurobotics.com</a></li>
     </ul>
@@ -182,10 +182,14 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1" style="width:200px;">
         <ul class="contact-list">
-          <li class="p-name"> <a href="https://hgchen.com/pol_vis_tutorial/cvpr2022/" target="_blank">Polarization-based Computer Vision</a> </li></ul>
+          <li class="p-name"> <a href="https://hgchen.com/pol_vis_tutorial/cvpr2023/" target="_blank">Polarization-based Computer Vision</a> </li></ul>
       </div>
 
-      <div class="footer-col footer-col-2" style="width:200px;"><ul class="social-media-list"><li><a href="https://github.com/CMU-MultiComp-Lab" target="_blank"><i class="fab fa-github"></i> <span class="username">CMU-MultiComp-Lab</span></a></li><li><a href="https://www.youtube.com/channel/UCqlHIJTGYhiwQpNuPU5e2gg"  target="_blank"><i class="fab fa-youtube"></i> <span class="username">YouTube</span></a></li></ul>
+      <div class="footer-col footer-col-2" style="width:200px;">
+        <ul class="social-media-list">
+          <li><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i><span class="username">hgchen</span></a></li>
+          <li><a href="https://www.youtube.com/"  target="_blank"><i class="fab fa-youtube"></i> <span class="username">YouTube</span></a>
+          </li></ul>
 </div>
 
       <div class="footer-col footer-col-3">
@@ -230,17 +234,6 @@
 <!-- Include custom icon fonts -->
 <link rel="stylesheet" href="/pol_vis_tutorial/assets/css/fontawesome-all.min.css">
 <link rel="stylesheet" href="/pol_vis_tutorial/assets/css/academicons.min.css">
-
-<!-- Google Analytics -->
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-131744305-1', 'auto');
-ga('send', 'pageview');
-</script>
 
 
   </body>
