--- a/cvpr2023/index.html
+++ b/cvpr2023/index.html
@@ -187,7 +187,7 @@
       
       <div class="footer-col footer-col-2" style="width:200px;">
         <ul class="social-media-list">
-          <li><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i><span class="username">hgchen</span></a></li>
+<!--          <li><a href="https://github.com/" target="_blank"><i class="fab fa-github"></i><span class="username">hgchen</span></a></li>-->
           <li><a href="https://www.youtube.com/"  target="_blank"><i class="fab fa-youtube"></i> <span class="username">YouTube</span></a>
           </li></ul>
 </div>
