Update time and program.

--- a/cvpr2023/index.html
+++ b/cvpr2023/index.html
@@ -89,7 +89,7 @@
 <hr />
 
 <ul>
-  <li><strong>Time:</strong> Monday, 6/20/2022, 9:00am - 12:30pm CT. </li>
+  <li><strong>Time:</strong> Monday, 6/19/2022, 9:00am - 12:00pm PT. </li>
   <li><strong>Location:</strong> CVPR 2023, Vancouver, BC, Canada. Recorded videos will also be uploaded here soon.</li>
   <li><strong>Contact:</strong> Please see the organizers' information below.</li>
 </ul>
